--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/test_characters.json
+    - lib/data_generate_python/output/flutter_characters.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
