--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.32.4
+          flutter-version: '3.32.4'
           channel: 'stable'
           cache: true
       
@@ -32,6 +32,7 @@ jobs:
           flutter --version
           dart --version
       
+
       - run: flutter --version
       - run: flutter pub get
       - run: flutter build web --release --web-renderer html --base-href /${{ steps.version.outputs.repository }}/
