--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,13 +5,16 @@ on:
     branches: [ master ]
 
   workflow_dispatch:
-
+  
+permissions:
+  contents: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -27,15 +30,20 @@ jobs:
           channel: 'stable'
           cache: true
       
+      - name: Ensure correct Flutter path
+        run: echo "$HOME/flutter/bin" >> $GITHUB_PATH
+        
       - name: Show versions (sanity check)
         run: |
           flutter --version
           dart --version
-      
-
-      - run: flutter --version
-      - run: flutter pub get
-      - run: flutter build web --release --web-renderer html --base-href /${{ steps.version.outputs.repository }}/
+          which flutter
+          
+      - name: Install dependencies
+        run: flutter pub get
+        
+      - name: Build web
+        run: flutter build web --release --base-href /${{ steps.version.outputs.repository }}/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
